--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -7,7 +7,15 @@ Welcome to the docs! You can start writing documents in `/content/docs`.
 
 ## What is Next?
 
-<Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" />
-</Cards>
+<Loader />
+<Linear />
+<EaseIn />
+<EaseOut />
+<EaseInOut />
+<CustomBezier />
+<Ease />
+<EasingSpring />
+<MotionSpring />
+<ClipPathDemo />
+<SplitText />
+<TabsClipPath />
