Add @uidotdev/usehooks dependency; create new sections for animating height and layout ID demos in documentation. Update MDX components to include new height animations and adjust existing components for better usability.

--- a/content/docs/section-5.mdx
+++ b/content/docs/section-5.mdx
@@ -9,6 +9,9 @@ description: LayoutId
 When two components have the same layoutId, Framer Motion knows they are visually connected, even if they are technically different elements in React.
 It then animates between their layouts smoothly — making complex UI transitions feel magical and natural.
 
+[Magic Motion](https://www.nan.fyi/magic-motion)
+
+
 <LayoutIdDemo/>
 
 ```tsx
@@ -62,3 +65,5 @@ export const MotionLayout = () => {
   );
 };
 ```
+
+
