Update documentation: rename section title to "Animations", add checkbox animation demo with video, and introduce useSpring and useTransform components. Refactor MDX components to include new video and animation components.

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Section 1
+title: Animations
 description: Your first document
 ---
 
@@ -102,4 +102,4 @@ With easings the mental model is duration and the type of easing. But with sprin
 
 There's no duration involved in spring animations. But it doesn't mean that we cannot define duration. Framer motion let's you define duration with an another technique were you can define duration and the bounce.
 
-[Spring Physics](http://joshwcomeau.com/animation/a-friendly-introduction-to-spring-physics/)
+[Spring Physics](https://www.joshwcomeau.com/animation/a-friendly-introduction-to-spring-physics/#sandbox-7)
